src/pages/homepage/Homepage.scss
.homepage {
  background-color: var(--bg-color);

  display: grid;
  grid-template-areas:
    "searchbar searchbar"
    "linkpad fun-box";
  grid-template-columns: min-content 3fr;
  grid-template-rows: min-content 1fr;
  padding: 5vw;
  gap: 2rem;
  align-items: center;
  justify-content: center;
  &.vertical-mode {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15vh;
  }
}

.homepage-search-form {
  grid-column: 1/3;
  width: 40%;
  /* 
    position relative to allow us to make the submit button absolute and move it
    relative to this box rather than the document 
  */
  position: relative;
  transition: 0.3s ease;
  &:focus-within {
    width: 100%;
  }
}

.vertical-mode .homepage-search-form {
  width: fit-content;
}

.homepage-searchbar {
  background-color: var(--header-color);
  width: 100%;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
  padding: 1rem 4.5rem 1rem 1rem;
  border: 1px solid transparent;
  outline: 0.1rem solid var(--text-color);
  color: var(--text-color);
  font-size: 2rem;
  box-sizing: border-box;
  transition: 0.1s ease;
  font-family: var(--font-family-retro);
  text-overflow: ellipsis;
  &:hover,
  &:focus,
  &:focus-visible,
  &:focus-within {
    outline-width: 0.5rem;
  }
}

.vertical-mode .homepage-search-form .homepage-searchbar {
  width: 85vw;
  &:hover,
  &:focus,
  &:focus-visible,
  &:focus-within {
    width: 90vw;
  }
}

.homepage-search-submit {
  --square-size: 3rem;
  width: var(--square-size);
  height: var(--square-size);
  border: 1px solid transparent;
  background-color: transparent;
  border-radius: 50%;
  position: absolute;
  box-sizing: border-box;
  top: calc(
    var(--square-size) / 4
  ); // yes, i did the var mostly just for this calc... unnecesary
  right: calc(var(--square-size) / 4);
  margin: 0;
  padding: 0;
  pointer-events: none;
  transition: 0.1s ease;
  display: grid;
  align-content: center;
  svg {
    color: #9898a0;
    width: inherit;
    height: inherit;
  }
}

.homepage-list-of-links {
  grid-row: 2;
  list-style: none;
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  gap: 2rem;
  height: fit-content;
  width: fit-content;
}

.homepage-icon-creator-links {
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  color: var(--text-color-opaque);
}

